--- a/RealState.ipynb
+++ b/RealState.ipynb
@@ -1407,7 +1407,7 @@
       "source": [
         "# Test the deployed model on an example from our test set\n",
         "# The correct score for this prediction is 7\n",
-        "prediction = !gcloud ai-platform predict --model=model_house --json-instances=predictions.json --version=$KERAS_VERSION_NAME\n",
+        "prediction = !gcloud ai-platform predict --model=$MODEL --json-instances=predictions.json --version=$KERAS_VERSION_NAME\n",
         "print(prediction[1])"
       ],
       "execution_count": 175,
